--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,10 @@
+*desktop.ini
 *.log
 *.pw
 *.zip
 *.log
 *.pw
-desktop.ini
 * =====Sub Directories=====
-*desktop.ini
 
 Archive
 log
@@ -66,3 +65,5 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+/notes.ps1
+/jenkins.ps1
